bk_ida/gccida/c3/can_disregard_other_sets
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_disregard_other_sets/src/gcse.c:3900:27: error: use of undeclared identifier 'uid_cuid_1'
v22 = *( ( unsigned int *)uid_cuid_1 + v21); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_disregard_other_sets/src/gcse.c:3902:21: error: use of undeclared identifier 'uid_cuid_1'
+ ( ( *( ( _DWORD *)uid_cuid_1 + v21) >> 3) & 0x1FFFFFF8)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_disregard_other_sets/src/gcse.c:3906:31: error: use of undeclared identifier 'uid_cuid_1'
|| ( int)v22 >= *( ( _DWORD *)uid_cuid_1 + rtint) ) 
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_disregard_other_sets/src/gcse.c:3910:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v26 = ( rtx *)v18[2]; 
              ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_disregard_other_sets/src/gcse.c:3926:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v24 = ( __int64)v18[2]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_disregard_other_sets/src/gcse.c:3936:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v25 = ( __int64)v3->insn[2]; 
                ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_disregard_other_sets/src/gcse.c:3950:27: error: use of undeclared identifier 'uid_cuid_1'
v12 = *( ( unsigned int *)uid_cuid_1 + v11); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_disregard_other_sets/src/gcse.c:3951:85: error: use of undeclared identifier 'uid_cuid_1'
v13 = *( unsigned __int64 *)( ( char *)reaching_defs[v10]->elms + ( ( *( ( _DWORD *)uid_cuid_1 + v11) >> 3) & 0x1FFFFFF8)); 
                                                                                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_disregard_other_sets/src/gcse.c:3955:31: error: use of undeclared identifier 'uid_cuid_1'
|| ( int)v12 >= *( ( _DWORD *)uid_cuid_1 + v9) ) 
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_disregard_other_sets/src/gcse.c:3959:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = ( rtx *)v8[2]; 
              ^~~~~
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_disregard_other_sets/src/gcse.c:3971:15: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = ( rtx *)v8[2]; 
              ^~~~~
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/can_disregard_other_sets/src/obj/gcse.o] Error 1
